# multimodal-audit-engine

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  frontend.py  main.py  pyproject.toml
backend/data/: rate_limit.json
backend/data/faiss_index/: index.faiss  index.pkl
backend/scripts/: index_documents.py
backend/src/graphs/: nodes.py  state.py  workflow.py
backend/src/services/: video_indexer.py
